Build and publish with GitHub actions (#46)